# Email-SaaS

./: .env.example  .gitignore  CODE_AUDIT_REPORT.md  DEPLOYMENT_GUIDE.md  QUICKSTART.md  README.md  READY_TO_DEPLOY.md  deploy.sh  pyproject.toml  render.yaml  requirements.txt  sample_leads.csv  test_system.py
backend/: __init__.py  background_worker.py  config.py  daily_report.py  database.py  email_sender.py  license_validator.py  main.py  reply_checker.py  requirements.txt  scheduler.py  settings_service.py  template_renderer.py  templates.py
frontend/: app.js  index.html  styles.css
test-docs/: COMPLETE_SETUP.md  CSV_UPLOAD_GUIDE.md  DAILY_REPORT_GUIDE.md  FINAL_FIX.md  FINAL_IMPLEMENTATION.md  QUICK_REPLY_FIX.md  REPLY_TEMPLATE_GUIDE.md  TROUBLESHOOTING.md  UPLOAD_FIX_SUMMARY.md  diagnose_upload.sh  manual_reply_check.py  pre_push_check.sh  send_test_report.py  test_upload.html
